Clear all the urls